# UnVisuallity

./: .gitignore  CMakeLists.txt  README.md  entry.cpp  entry.h  globals.h  vcpkg.json
dependencies/: curl_wrapper.h  http_status.h
dependencies/IXWebSocket/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/lazy_importer/include/: lazy_importer.hpp
dependencies/luau/: luau.rar
dependencies/luau/VM/include/: lua.h
dependencies/luau/VM/src/: lapi.cpp  lapi.h  ldebug.cpp  ldebug.h  ldo.cpp  ldo.h  lmem.cpp  lmem.h  lobject.h  lstate.h  ltable.cpp  ltm.cpp  ltm.h  lvmexecute.cpp
dependencies/lz4/: CMakeLists.txt
dependencies/nlohmann/: json.hpp
dependencies/pattern_scanner/: lxzp_scanner.cpp  lxzp_scanner.hpp
dependencies/xorstr/: xorstr.h
dependencies/zstd/lib/: libzstd_static.lib
src/core/communication/: communication.cpp  communication.h
src/core/environment/: environment.cpp  environment.h
src/core/environment/libs/: actor.cpp  cache.cpp  closure.cpp  console.cpp  crypt.cpp  debug.cpp  drawing.cpp  filesystem.cpp  http.cpp  input.cpp  metatables.cpp  misc.cpp  raknet.cpp  script.cpp  signals.cpp  websockets.cpp  websockets.h
src/core/execution/: execution.cpp  execution.h
src/core/render/: render.cpp  render.h
src/core/render/user_interface/: key_interface.cpp  key_interface.hpp  user_interface.cpp  user_interface.h
src/core/teleport_handler/: teleport_handler.cpp  teleport_handler.h
src/misc/: drawing_structures.h  inter.h  jetbrains_mono.h
src/rbx/engine/: game.h  game_structures.h  hyperion.h  luau.h
src/rbx/taskscheduler/: taskscheduler.cpp  taskscheduler.h  yielding.cpp  yielding.h
